--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet"> 
         <!-- font-family: 'Nerko One', cursive-->
+        
+        <meta charset="utf-8">
 
 
     </head>
@@ -502,7 +504,108 @@
                 </div>
             </main>
             <footer>
-                <div class="container"></div>
+                <div class="container">
+                    <div class="footer__title">
+                        Бесплатная индивидуальная консультация:
+                    </div>
+                    <div class="footer__flex-wrap">
+                        <form  class="footer__form" action="#" method="POST">
+                            <input class="footer__form-tel" type="tel" placeholder="+375 (--) --- -- --">
+                            <input class="footer__form-name" type="text" placeholder="Имя">
+                            <button class="footer__form-button" type="submit">Получить консультацию</button>
+                        </form>
+                        <div class="footer__list-flex-wrap">
+                            <ul class="footer__list">
+                                <li class="footer__list-item">
+                                    <a class="footer__list-item-link" aria-label="about" href="#">
+                                        О нас
+                                    </a>
+                                </li>
+                                <li class="footer__list-item">
+                                    <a class="footer__list-item-link" aria-label="blog" href="#">
+                                        Наш блог
+                                    </a>
+                                </li>
+                                <li class="footer__list-item">
+                                    <a class="footer__list-item-link" aria-label="projects" href="#">
+                                        Наши проекты
+                                    </a>
+                                </li>
+                                <li class="footer__list-item">
+                                    <a class="footer__list-item-link" aria-label="IT-news" href="#">
+                                        IT-новости
+                                    </a>
+                                </li>
+                                <li class="footer__list-item">
+                                    <a class="footer__list-item-link" aria-label="Vacancy" href="#">
+                                        Вакансии
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul class="footer__list">
+                                <li class="footer__list-item">
+                                    <a class="footer__list-item-link" aria-label="All courses" href="#">
+                                        Все курсы
+                                    </a>
+                                </li>
+                                <li class="footer__list-item">
+                                    <a class="footer__list-item-link" aria-label="Web development" href="#">
+                                        Веб разработка
+                                    </a>
+                                </li>
+                                <li class="footer__list-item">
+                                    <a class="footer__list-item-link" aria-label="Data science" href="#">
+                                        Data science
+                                    </a>
+                                </li>
+                                <li class="footer__list-item">
+                                    <a class="footer__list-item-link" aria-label="QA-Engineer" href="#">
+                                        QA-Engineer (тестировщик)
+                                    </a>
+                                </li>
+                                <li class="footer__list-item">
+                                    <a class="footer__list-item-link" aria-label="Test" href="#">
+                                        Вакансии
+                                    </a>
+                                </li>
+                            </ul>
+
+                        </div>
+                        <div class="footer__location">
+                            <div class="footer__location-social">
+                                <div class="footer__location-social-inst">
+                                    <img class="footer__location-social-inst-img" alt="instagramm" src="IMG/instagram.png">
+                                </div>
+                                <div class="footer__location-social-mail">
+                                    <img class="footer__location-social-mail-img" alt="mail" src="IMG/mail.png">
+                                </div>
+                                <div class="footer__location-social-teleg">
+                                    <img class="footer__location-social-teleg-img" alt="telegramm" src="IMG/telegram.png">
+                                </div>
+                            </div>
+                            <div class="footer__location-adress">
+                                г. Минск, ул. Кирова 10
+                            </div>
+                            <div class="footer__location-map">
+                                <a class="footer__location-map-link" aria-label="map" href="#">
+                                    Посмотреть на карте
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer__inform">
+                        <div class="footer__inform-logo">
+                            <img class="footer__inform-logo-img" alt="logo" src="IMG/footerLogoItec.png">
+                        </div>
+                        <div class="footer__inform-tel">
+                            <p>+375 (29) 556 40 28</p>
+                            <p>+375 (29) 556 40 29</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer__line">
+                    ITEC education company. Все права защищены 2020
+                </div>
             </footer>
         </div>
         <script type="text/javascript" src="JS/index.js"></script> <!-- Connection file JS -->
