--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="shortcut icon" href="IMG/favicon.png">                   <!--Connecting file image (favicon.png  512x512)-->             
         
         <!--SEO-->
-        <meta name="" lang="" content="">  <!--Descriptions | Authors | Keywords | Robots-->
+        <!-- <meta name="" lang="" content="">  Descriptions | Authors | Keywords | Robots -->
 
         <!--Fonts-->
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -133,7 +133,7 @@
                                         </div>
                                     </div>
                                     <div class="offer__description-picture">
-                                        <img class="offer__image-img" alt="image" src="img/data__science.svg" >
+                                        <img class="offer__image-img" alt="image" src="IMG/data__science.svg" >
                                     </div>
                                 </div>
 
@@ -147,7 +147,7 @@
                         <div class="advantages__wrap">
                             <div class="advantages__mark">
                                 <div class="advantages__mark-image">
-                                    <img class="advantages__mark-image-img"  src="img/mark.svg" alt="mark">
+                                    <img class="advantages__mark-image-img"  src="IMG/mark.svg" alt="mark">
                                 </div>
                                 <div class="advantages__mark-text"><!--
                                 -->Получите востребованную
@@ -165,7 +165,7 @@
                             </div>
                             <div class="advantages__mark">
                                 <div class="advantages__mark-image">
-                                    <img class="advantages__mark-image-img"  src="img/mark.svg" alt="mark">
+                                    <img class="advantages__mark-image-img"  src="IMG/mark.svg" alt="mark">
                                 </div>
                                 <div class="advantages__mark-text"><!--
                                     -->Собери крутое
@@ -181,7 +181,7 @@
                     <div class="container">
                         <div class="question__wrap">
                             <div class="question__icon">
-                                <img class="question__icon-img" src="img/question.svg" alt="question">
+                                <img class="question__icon-img" src="IMG/question.svg" alt="question">
                             </div>
                             <div class="question__title"><!--
                               -->Чем занимается специалист
@@ -262,7 +262,7 @@
                             </div>
                         </div> 
                         <div class="online__image-center">
-                            <img class="online__image-center-img" src="img/study__online.svg" alt="image" >
+                            <img class="online__image-center-img" src="IMG/study__online.svg" alt="image" >
                         </div>
                         <div class="online__wrapper">
                             <div class="online__text">
