--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             </div>
                             <div class="advantages__mark">
                                 <div class="advantages__mark-image">
-                                    <img class="advantages__mark-image-img"  src="img/mark.svg" alt="mark">
+                                    <img class="advantages__mark-image-img"  src="IMG/mark.svg" alt="mark">
                                 </div>
                                 <div class="advantages__mark-text"><!--
                                     -->Реализуйте жизнеспособные 
@@ -302,7 +302,7 @@
                             С программой обучения можно ознакомиться здесь
                         </div>
                         <div class="programm__arrow">
-                            <img class="programm__arrow-img" src="img/arrow__bottom.svg" alt="arrow-down" >
+                            <img class="programm__arrow-img" src="IMG/arrow__bottom.svg" alt="arrow-down" >
                         </div>
                         <div class="programm__programm">
                             <a class="programm__programm-link" href="Files/Study__programm.pdf" download="" aria-label="link to the study programm">
