--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <!-- font-family: 'Nerko One', cursive-->
         
         <meta charset="utf-8">
+        <meta name="viewport" content="width=1140">
 
 
     </head>
